--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="edu.mgrace31gatech.donationtracker.app.controllers.MainActivity">
+    tools:context="edu.mgrace31gatech.donationtracker.app.controllers.WelcomePageActivity">
 
     <EditText
         android:id="@+id/userNameBox"
