--- a/app/src/main/res/layout/location_list.xml
+++ b/app/src/main/res/layout/location_list.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
+    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
     tools:context="edu.mgrace31gatech.donationtracker.app.controllers.LocationDetailActivity"
     tools:listitem="@layout/location_list_content" />
 
